--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       {% assign pages = site.pages | sort:"order"  %}
       <div class="trigger">
         {% for page in pages %}
-          {% if page.title %}
+          {% if page.title and page.order %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
