--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
       {% include footer.html %}
     </div>
-
+    
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </body>
 
 </html>
