--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -5,7 +5,7 @@
 
   {% include head.html %}
 
-  <body data-spy="scroll" data-target="#side-nav">
+  <body>
     <div class="container">
       {% include header.html %}
 
