fix vb.net highlighting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/styles/github.min.css">
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/languages/vbnet.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 
   <!-- Overridden theme -->
