Added platform Icons to the Guides Page
The platform icons take up less room, look better and collapse better
for mobile.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -11,6 +11,7 @@
 ##  Index.md Page
 ##############################################################################
 */
+
 .index_table_icon {
 	width:32px;
 	height:32px;
@@ -18,4 +19,15 @@
 .index_table_primary_use {
 	margin:10px;
 	font-size:0.85em;
+}
+
+/*
+##############################################################################
+##  guides.md Page
+##############################################################################
+*/
+
+.guide_icon {
+	width:36px;
+	height:36px;
 }
