Updated the images on the index page
Moved more style onto CSS and created raster description for into
images.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -11,7 +11,9 @@
 ##  Index.md Page
 ##############################################################################
 */
-
+.index_use_images {
+	width:160px;
+}
 .index_table_icon {
 	width:32px;
 	height:32px;
