Proof-of-Concept TOC for ScrollSpy Doc Sidebar
I still want to generate the sidebar automatically from the markdown,
but this illustrates the basic scroll spy TOC functionality.

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -23,6 +23,13 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <script>
+    $('body').scrollspy({
+        target: '.bs-docs-sidebar',
+        offset: 40
+    });
+    </script>
   </body>
 
 </html>
