--- a/_layouts/toc-page.html
+++ b/_layouts/toc-page.html
@@ -1,10 +1,58 @@
 ---
-layout: default
+layout: bootstrap
 ---
 
-<div class="post">
+<div class="row">
+    <!--Nav Bar -->
+    <nav class="col-xs-3 bs-docs-sidebar">
+        <ul id="sidebar" class="nav nav-stacked fixed">
+            <li>
+                <a href="#welcome">Welcome</a>
+            </li>
+            <li>
+                <a href="#start-here">Start Here</a>
+            </li>
+            <li>
+                <a href="#overview">Overview</a>
+            </li>
+            <li>
+                <a href="#contributing">Contributing</a>
+                <ul class="nav nav-stacked">
+                    <li><a href="#github">GitHub</a></li>
+                    <li><a href="#discourse">Discourse</a></li>
+                    <li><a href="#report-bugs">Report Bugs</a></li>
+                    <li><a href="#this-website">This website</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#contacts">Contacts</a>
+            </li>
+            <li>
+                <a href="#plugin-distribution">Plugin Distribution</a>
+                <ul class="nav nav-stacked">
+                    <li><a href="#food4rhino">Food4Rhino</a></li>
+                    <li><a href="#yak">Yak</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#rhino-developer-training">Rhino Developer Training</a>
+            </li>
+            <li>
+                <a href="#faq">FAQ</a>
+            </li>
+            <li>
+                <a href="#todo">TODO</a>
+            </li>
+        </ul>
+    </nav>
+    <!--Main Content -->
+    <div class="col-xs-9">
+      <!--<div class="post">-->
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+        <article class="post-content">
+          {{ content }}
+        </article>
+      <!--</div>-->
+
+    </div>
 </div>
