Update TOC page to a fluid design
For small phones the columns update properly to max screen.  Used
multiple classes to react to device.

--- a/_layouts/toc-page.html
+++ b/_layouts/toc-page.html
@@ -2,9 +2,10 @@
 layout: bootstrap
 ---
 
-<div class="row">
+<div class="container-fluid">
+<div class="row-fluid">
     <!--Nav Bar -->
-    <nav class="col-xs-3 bs-docs-sidebar">
+    <nav class="col-xs-0 col-md-3 bs-docs-sidebar">
         <ul id="sidebar" class="nav nav-stacked fixed">
             <li>
                 <a href="#welcome">Welcome</a>
@@ -46,7 +47,7 @@ layout: bootstrap
         </ul>
     </nav>
     <!--Main Content -->
-    <div class="col-xs-9">
+    <div class="col-xs-12 col-md-9">
       <!--<div class="post">-->
 
         <article class="post-content">
@@ -55,4 +56,5 @@ layout: bootstrap
       <!--</div>-->
 
     </div>
+</div>
 </div>
