--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,11 @@
       <div class="trigger">
       	<a class="page-link" href="{{ site.baseurl }}/">Welcome</a>
         {% for page in pages %}
-          {% if page.title and page.order %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
+          {% if page.title != 'TODO List' %}
+            {% if page.title and page.order %}
+            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% endif %}
+          {% endif %}  
         {% endfor %}
         <a class="page-link" href="http://discourse.mcneel.com/c/rhino-developer">Forums</a>
       </div>
