--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -1,3 +1,15 @@
+
+/* Mimicing GitHub's font styling, but puttin Segou UI higher (the Grasshopper font) for Windows users */
+body {
+  font-family: 'Segoe UI', 'Helvetica Neue', Helvetica, Frutiger, Arial, 'Frutiger Linotype', freesans, 'Dejavu Sans' sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 300;
+  color: #111;
+  background-color: #fdfdfd;
+  -webkit-text-size-adjust: 100%;
+}
+
 .tab-content .tab-pane {
   display: none;
 }
@@ -5,6 +17,7 @@
 .tab-content .active {
   display: block;
 }
+
 
 /*
 ##############################################################################
@@ -68,7 +81,7 @@ tbody.index_table tr td{
     color: #999;
     border-left: 2px solid transparent;
     padding: 4px 20px;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 400;
 }
 
@@ -77,7 +90,7 @@ tbody.index_table tr td{
     padding-top: 1px;
     padding-bottom: 1px;
     padding-left: 10px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 /* active & hover links */
