--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -1,10 +1,12 @@
 
 /* Mimicing GitHub's font styling, but puttin Segou UI higher (the Grasshopper font) for Windows users */
 body {
-  font-family: 'Segoe UI', 'Helvetica Neue', Helvetica, Frutiger, Arial, 'Frutiger Linotype', freesans, 'Dejavu Sans' sans-serif;
+  font-family: 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.6;
   font-weight: 300;
+  font-style: normal;
+  font-variant: normal;
   color: #111;
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
