Change the paragraph font-weight on Windows
Testing a bit of kludgy javascript that will change the paragraph
font-weight on windows.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,4 +46,14 @@
 
   </div>
 
+  <script>
+    if (navigator.appVersion.indexOf("Win")!=-1)
+    {
+      var paragraphs = document.getElementsByTagName("p");　　　　
+      for (var i = 0; i < paragraphs.length; i++) {　　　　
+        paragraphs[i].style.fontWeight = '400';　　　　
+      }
+    }
+  </script>
+
 </footer>
