--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -24,7 +24,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-    <script>
+    <!-- MathJax -->
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+    <script type="text/javascript">
     $('body').scrollspy({
         target: '.bs-docs-sidebar',
         offset: 40
