Fixes tiny subtle difference in background colors
Body was off-white…fixed that.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -8,7 +8,7 @@ body {
   font-style: normal;
   font-variant: normal;
   color: #111;
-  background-color: #fdfdfd;
+  background-color: white;
   -webkit-text-size-adjust: 100%;
 }
 
