Added Google Tag Manager Code for Analytics tracking
We are using Google Tag Manager to manage the Tags and triggers to
Google Analytics.  The script is in googletagmanager.html.  It gets
included on every page through an include in bootstrap.html

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -6,6 +6,9 @@
   {% include head.html %}
 
   <body>
+  
+    {% include googletagmanager.html %}
+
     <div class="container">
       {% include header.html %}
 
