How This Site Works Guide work
And adds copyright to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,10 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
+
+      <div class="footer-col  footer-col-0">
+        © 1997 - 20{{ site.time | date: '%y' }} McNeel
+      </div>
       <div class="footer-col  footer-col-1">
         <ul class="social-media-list">
 
