--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -21,43 +21,43 @@ layout: bootstrap
                 {% endif %}
 
                 {% if page.apis.first == 'RhinoCommon' %}
-                  <a href="{{ site.baseurl }}/guides/#rhinocommon-img-srcimageswinlogosmallpng-altwindows-classguideicon-img-srcimagesmaclogosmallpng-altos-x-classguideicon">RhinoCommon</a>
+                  <a href="{{ site.baseurl }}/guides/#rhinocommon">RhinoCommon</a>
                 {% endif %}
 
                 {% if page.apis.first == 'RhinoPython' %}
-                  <a href="{{ site.baseurl }}/guides/#rhinopython-img-srcimageswinlogosmallpng-altwindows-classguideicon-img-srcimagesmaclogosmallpng-altos-x-classguideicon">Rhino.Python</a>
+                  <a href="{{ site.baseurl }}/guides/#rhinopython">Rhino.Python</a>
                 {% endif %}
 
                 {% if page.apis.first == 'openNURBS' %}
-                  <a href="{{ site.baseurl }}/guides/#ropennurbs-toolkit-img-srcimageswinlogosmallpng-altwindows-classguideicon-img-srcimagesmaclogosmallpng-altos-x-classguideicon">openNURBS Toolkit</a>
+                  <a href="{{ site.baseurl }}/guides/#ropennurbs-toolkit">openNURBS Toolkit</a>
                 {% endif %}
 
                 {% if page.apis.first == 'CPP' %}
-                  <a href="{{ site.baseurl }}/guides/#cc-img-srcimageswinlogosmallpng-altwindows-classguideicon">C/C++</a>
+                  <a href="{{ site.baseurl }}/guides/#cc">C/C++</a>
                 {% endif %}
 
                 {% if page.apis.first == 'Grasshopper' %}
-                  <a href="{{ site.baseurl }}/guides/#grasshopper-img-srcimageswinlogosmallpng-altwindows-classguideicon">Grasshopper</a>
+                  <a href="{{ site.baseurl }}/guides/#grasshopper">Grasshopper</a>
                 {% endif %}
 
                 {% if page.apis.first == 'RhinoScript' %}
-                  <a href="{{ site.baseurl }}/guides/#rhinoscript-img-srcimageswinlogosmallpng-altwindows-classguideicon">RhinoScript</a>
+                  <a href="{{ site.baseurl }}/guides/#rhinoscript">RhinoScript</a>
                 {% endif %}
 
                 {% if page.apis.first == 'RDK' %}
-                  <a href="{{ site.baseurl }}/guides/#renderer-development-kit-img-srcimageswinlogosmallpng-altwindows-classguideicon">RDK</a>
+                  <a href="{{ site.baseurl }}/guides/#renderer-development-kit">RDK</a>
                 {% endif %}
 
                 {% if page.apis.first == 'RhinoMobile' %}
-                  <a href="{{ site.baseurl }}/guides/#rhinomobile-img-srcimagesandroidlogosmallpng-altandroid-classguideicon-img-srcimagesioslogosmallpng-altios-classguideicon">RhinoMobile</a>
+                  <a href="{{ site.baseurl }}/guides/#rhinomobile">RhinoMobile</a>
                 {% endif %}
 
                 {% if page.apis.first == 'Zoo' %}
-                  <a href="{{ site.baseurl }}/guides/#zoo-license-manager-img-srcimageswinlogosmallpng-altwindows-classguideicon">Zoo License Manager</a>
+                  <a href="{{ site.baseurl }}/guides/#zoo-license-manager">Zoo License Manager</a>
                 {% endif %}
 
                 {% if page.apis.first == 'DevDocs' %}
-                  <a href="{{ site.baseurl }}/guides/#developer-docs-a-iddev-docsa">Developer Docs</a>
+                  <a href="{{ site.baseurl }}/guides/#developer-docs">Developer Docs</a>
                 {% endif %}
 
                 <ul class="nav nav-stacked">
