Fixes handleization bug

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -16,7 +16,7 @@ layout: bootstrap
 
               <li>
 
-                <a href="{{ site.baseurl }}/guides/#{{ page.apis.first | handleize | downcase }}">{{ page.apis.first }}</a>
+                <a href="{{ site.baseurl }}/guides/#{{ page.apis.first | handle | downcase | replace: ' ', '-' }}">{{ page.apis.first }}</a>
 
                 <ul class="nav nav-stacked">
 
