Moved TODO list into Admin page
This page is accessible from the little gear/cog icon in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-col-wrapper">
 
       <div class="footer-col  footer-col-0">
-        © 1997 - 20{{ site.time | date: '%y' }} McNeel
+        © 1997 - 20{{ site.time | date: '%y' }} Robert McNeel and Associates
       </div>
       <div class="footer-col  footer-col-1">
         <ul class="social-media-list">
@@ -44,6 +44,10 @@
       </div>
 
       <div class="footer-col  footer-col-2">
+        <a href="{{ site.baseurl }}/admin"><span class="glyphicon glyphicon-cog"></span>Admin</a>
+      </div>
+
+      <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
       </div>
     </div>
