fix edit page on git hub links that were broken after site deployed to custom domain

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
         <ul class="social-media-list">
 
           <li>
-          {% assign burl = 'https://github.com/' | append: (site.github_username | append: site.baseurl) %}
+          {% assign burl = 'https://github.com/' | append: site.editMeOnGhBaseUrl %}
           {% if page.path contains '/repo/' %}
             {% assign tailurl = page.path | replace:'/repo/', '/blob/gh-pages/' %}
           {% else %}
