Make WARNING pop more
in the Your First Plugin Guide

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -20,6 +20,18 @@ body {
   display: block;
 }
 
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+
+.bs-callout-danger {
+    border-left-color: #ce4844;
+}
+
 /*
 ##############################################################################
 ##  Index.md Page
