--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/rhinodevlogo148x128.png" alt="Rhino Developer Docs" height="48" width="56"></a><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
-
+      <img class="menu-icon" src="./images/gi.svg">
       {% assign pages = site.pages | sort:"order"  %}
       <div class="trigger">
       	<a class="page-link" href="{{ site.baseurl }}/">Welcome</a>
