rhinoscriptsyntax api docs.  Fix docstrings and format html

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -249,3 +249,8 @@ tbody.index_table tr td{
 #rhinoscriptsyntax-api-docs .docstring-panel .docstring-field .hide {
   display: none;
 }
+
+#rhinoscriptsyntax-api-docs pre.functionDescription {
+  background-color: inherit;
+  border: none;
+}
