--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -184,6 +184,12 @@ tbody.index_table tr td{
     display: none;
 } }
 
+@media print { 
+  .bs-docs-sidebar {
+    display: none;
+  }
+}
+
 /*
 ##############################################################################
 ## RhinoScriptSyntax API docs
