Added two CSS classes to float images left and right
Added a .float-img-right and .float-img-left class.  Use this along with
.clear-img class to clear the next black object from wrapping around the
image.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -31,6 +31,31 @@ body {
 .bs-callout-danger {
     border-left-color: #ce4844;
 }
+/*
+##############################################################################
+## Image float overrides. Allows to wrap text around images.
+## {: .float-img-right}
+## To finish the wrapping, insert this text under next block object:
+## {: .clear-img}
+## That assures the next block element will stay clear of the image.
+##############################################################################
+*/
+.float-img-right {
+  float: right;
+  padding-left: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.float-img-left {
+  float: left;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.clear-img {
+  clear:both;
+}
 
 /*
 ##############################################################################
@@ -184,7 +209,7 @@ tbody.index_table tr td{
     display: none;
 } }
 
-@media print { 
+@media print {
   .bs-docs-sidebar {
     display: none;
   }
