--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -32,6 +32,69 @@ body {
     border-left-color: #ce4844;
 }
 
+/* Search input form and search results styling */
+
+#sitesearch {
+    float:right;
+    margin-left:20px;
+    margin-top:6px;
+    margin-right:0px;
+    margin-bottom:0px;
+}
+
+.searchBox {
+	background:white;
+	background-repeat: no-repeat;
+	padding-left: 20px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+	cursor: pointer;
+  background-image: url('/images/searchicon.png');
+	vertical-align: middle;
+    line-height: 18px;
+    padding-bottom:15px;
+    padding-top: 2px;
+    margin-top:4px;
+    height:25px;
+}
+.searchBoxBeta {
+	background:white;
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+	cursor: pointer;
+	vertical-align:middle;
+}
+
+#heading #cse-search-boxBeta {
+    padding:0;
+    margin: 0;
+    position: absolute;
+    right: 0;
+    bottom:16px;
+    z-index: 100;
+}
+
+
+#cref {
+	margin-top:12px;
+    line-height:24px;
+}
+
+#searchtext {
+	height:22px;
+	padding:0px;
+    padding-top:2px;
+	line-height:18px;
+}
+
+#cse-search-results iframe {
+	height : 1150px;
+}
+
+
+
 /* kbd overrides */
 kbd
 {
