Porting C/C++ guides: "adding_a_custom_menu.md" through "adjusting_isocurve_density.md"

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -16,8 +16,11 @@ layout: bootstrap
 
               <li>
 
-                <a href="{{ site.baseurl }}/guides/#{{ page.apis.first | handle | downcase | replace: ' ', '-' }}">{{ page.apis.first }}</a>
-
+                {% if page.apis.first == 'C/C++' %}
+                  <a href="{{ site.baseurl }}/guides/#cpp">C/C++</a>
+                {% else %}
+                  <a href="{{ site.baseurl }}/guides/#{{ page.apis.first | handle | downcase | replace: ' ', '-' }}">{{ page.apis.first }}</a>
+                {% endif %}
                 <ul class="nav nav-stacked">
 
                   <!-- Find the h1 handle for title -->
